# rust-solutions

./: LICENSE
02_echor/: Cargo.toml  mk-outs.sh
02_echor/src/: main.rs
02_echor/tests/: cli.rs
03_catr/src/: lib.rs  main.rs
catr/: Cargo.toml
catr/src/: lib.rs  main.rs
echor/: Cargo.toml  err
echor/src/: main.rs
echor/tests/: cli.rs
hello/: Cargo.toml
hello/tests/: cli.rs
