[package]
name = "catr"
version = "0.1.0"
edition = "2024"
authors = ["Rob Samoraj <rsamoraj11@gmail.com>"]

[dependencies]
anyhow = "1.0.80"
clap = {version = "4.5.0", features = ["derive", "color"] }

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.0.4"
pretty_assertions = "1.4.0"
rand = "0.8.5"